// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with editPath renders correctly 1`] = `
<div
  to="foo/:id/avatar"
>
  <img
    alt={undefined}
    src="https://via.placeholder.com/400x400"
    style={
      Object {
        "backgroundColor": "#ddd",
        "borderRadius": 2,
        "display": "inline-block",
        "height": "auto",
        "marginRight": 16,
        "maxWidth": "100%",
        "width": 400,
      }
    }
    title="Clique para editar"
  />
</div>
`;

exports[`without editPath renders correctly 1`] = `
<img
  alt={undefined}
  src="https://via.placeholder.com/400x400"
  style={
    Object {
      "backgroundColor": "#ddd",
      "borderRadius": 2,
      "display": "inline-block",
      "height": "auto",
      "marginRight": 16,
      "maxWidth": "100%",
      "width": 400,
    }
  }
  title={undefined}
/>
`;
